# WhatAPickle

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
output/: embeddings_ViT-B-32_laion2b_s34b_b79k.npz  pickle_head_logreg.json  pickle_head_logreg.pkl  pickle_head_mlp.json  pickle_head_mlp.pkl
scripts/: evaluate.py  finetune.py  scrape_images.py  test_single.py
src/pickle_detector/: detector.py  prompts.py
src/pickle_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
