[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickle-detector"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "open-clip-torch>=2.24",
    "Pillow>=10.0",
    "requests>=2.31",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]