[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickle-detector"
version = "0.2.0"
description = "CLIP-based pickle detector with Gemini Vision fallback"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "open-clip-torch>=2.24",
    "Pillow>=10.0",
    "requests>=2.31",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0",
    "cryptography==41.0.7",
]
scraping = [
    "bing-image-downloader>=1.1",
]
all = [
    "pickle-detector[gemini,scraping]",
]

[tool.setuptools.packages.find]
where = ["src"]